<resources>
    <string name="app_name">Kwik Kart</string>
    <string name="button_label_login">Login</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_track">Track</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="meat">Meat</string>
    <string name="dairy">Eggs &amp; Dairy</string>
    <string name="produce">Produce</string>
    <string name="Drinks">Drinks</string>
    <string name="dessert">Dessert</string>
    <string name="other">Other</string>
    <string name="signed_in_placeholder">SIGNED IN! Placeholder</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="channel_name">MY_CHANNEL</string>
    <string name="channel_description">MY_CHANNEL_DESCRIPTION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
